
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int close (int) ;
 int for_each_mmap (int ,void*) ;
 int g_dir ;
 int g_pid ;
 int info (char*,...) ;
 int open_dir (int ) ;
 int save_mmap ;

void handle_cmd_pid() {
 info("[.] dumping mmaps for %u:\n", g_pid);
 int dirfd = open_dir(g_dir);
 for_each_mmap(save_mmap, (void *)(unsigned long)dirfd);
 close(dirfd);
 info("[+] done\n");
}
