; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45175.c_handle_cmd_pid.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45175.c_handle_cmd_pid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"[.] dumping mmaps for %u:\0A\00", align 1
@g_pid = common dso_local global i32 0, align 4
@g_dir = common dso_local global i32 0, align 4
@save_mmap = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"[+] done\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @handle_cmd_pid() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @g_pid, align 4
  %3 = call i32 (i8*, ...) @info(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %2)
  %4 = load i32, i32* @g_dir, align 4
  %5 = call i32 @open_dir(i32 %4)
  store i32 %5, i32* %1, align 4
  %6 = load i32, i32* @save_mmap, align 4
  %7 = load i32, i32* %1, align 4
  %8 = sext i32 %7 to i64
  %9 = inttoptr i64 %8 to i8*
  %10 = call i32 @for_each_mmap(i32 %6, i8* %9)
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @close(i32 %11)
  %13 = call i32 (i8*, ...) @info(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @info(i8*, ...) #1

declare dso_local i32 @open_dir(i32) #1

declare dso_local i32 @for_each_mmap(i32, i8*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
